syntax = "proto3";
package listah.v1;


option go_package = "cornucopia/listah/internal/pkg/proto/listah/v1";


import "listah/v1/commons.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


message UserServiceCreateOneRequest {
    string id = 1;
    string first_name = 2 [json_name = "first_name"];
    string middle_names = 3 [json_name = "middle_names"];
    string last_name = 4 [json_name = "last_name"];
    string username = 5;
    string email = 6;
    string role = 20;
    Audit audit = 50;
}
message UserServiceCreateOneResponse {
    string id = 1;
    string first_name = 2 [json_name = "first_name"];
    string middle_names = 3 [json_name = "middle_names"];
    string last_name = 4 [json_name = "last_name"];
    string username = 5;
    string email = 6;
    string role = 20;
    Audit audit = 50;
}
message UserServiceCreateManyRequest {
    repeated UserServiceCreateOneRequest user = 1;
}
message UserServiceCreateManyResponse {
    repeated UserServiceCreateOneResponse user = 1;
}


message UserServiceEchoRequest {
    string id = 1;
    string first_name = 2 [json_name = "first_name"];
    string middle_names = 3 [json_name = "middle_names"];
    string last_name = 4 [json_name = "last_name"];
    string username = 5;
    string email = 6;
    string role = 20;
    Audit audit = 50;
}
message UserServiceEchoResponse {
    string id = 1;
    string first_name = 2 [json_name = "first_name"];
    string middle_names = 3 [json_name = "middle_names"];
    string last_name = 4 [json_name = "last_name"];
    string username = 5;
    string email = 6;
    string role = 20;
    Audit audit = 50;
}


message UserServiceReadOneRequest {
    string id = 1;
}
message UserServiceReadOneResponse {
    string id = 1;
    string first_name = 2 [json_name = "first_name"];
    string middle_names = 3 [json_name = "middle_names"];
    string last_name = 4 [json_name = "last_name"];
    string username = 5;
    string email = 6;
    string role = 20;
    Audit audit = 50;
}
message UserServiceReadManyRequest {
    repeated UserServiceReadOneRequest user = 1;
}
message UserServiceReadManyResponse {
    repeated UserServiceReadOneResponse user = 1;
}


message UserServiceUpdateOneRequest {
    string id = 1;
    string first_name = 2 [json_name = "first_name"];
    string middle_names = 3 [json_name = "middle_names"];
    string last_name = 4 [json_name = "last_name"];
    string username = 5;
    string email = 6;
    string role = 20;
    Audit audit = 50;
}
message UserServiceUpdateOneResponse {
    string id = 1;
    string first_name = 2 [json_name = "first_name"];
    string middle_names = 3 [json_name = "middle_names"];
    string last_name = 4 [json_name = "last_name"];
    string username = 5;
    string email = 6;
    string role = 20;
    Audit audit = 50;
}
message UserServiceUpdateManyRequest {
    repeated UserServiceUpdateOneRequest user = 1;
}
message UserServiceUpdateManyResponse {
    repeated UserServiceUpdateOneResponse user = 1;
}


message UserServiceDeleteOneRequest {
    string id = 1;
    Audit audit = 50;
}
message UserServiceDeleteOneResponse {
    string id = 1;
    string first_name = 2 [json_name = "first_name"];
    string middle_names = 3 [json_name = "middle_names"];
    string last_name = 4 [json_name = "last_name"];
    string username = 5;
    string email = 6;
    string role = 20;
    Audit audit = 50;
}
message UserServiceDeleteManyRequest {
    repeated UserServiceDeleteOneRequest user = 1;
}
message UserServiceDeleteManyResponse {
    repeated UserServiceDeleteOneResponse user = 1;
}


service UserService {
    rpc CreateOne(UserServiceCreateOneRequest) returns (UserServiceCreateOneResponse) {}
    rpc CreateMany(UserServiceCreateManyRequest) returns (UserServiceCreateManyResponse) {}

    rpc ReadOne (UserServiceReadOneRequest) returns (UserServiceReadOneResponse) {}
    rpc ReadMany (UserServiceReadManyRequest) returns (UserServiceReadManyResponse) {}

    rpc UpdateOne(UserServiceUpdateOneRequest) returns (UserServiceUpdateOneResponse) {}
    rpc UpdateMany(UserServiceUpdateManyRequest) returns (UserServiceUpdateManyResponse) {}

    rpc DeleteOne(UserServiceDeleteOneRequest) returns (UserServiceDeleteOneResponse) {}
    rpc DeleteMany(UserServiceDeleteManyRequest) returns (UserServiceDeleteManyResponse) {}

    rpc Echo (UserServiceEchoRequest) returns (UserServiceEchoResponse) {}
}
